# LakeFlow

./: .env  .env.example  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.yml  env.example  env.txt  export_code.py  portainer-stack.yml  project_code.txt  ruff.toml  run.sh
.github/workflows/: deploy.yml  push-dockerhub.yml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/docs/: API_EMBED.md
backend/src/lakeflow/: main.py
docs/: troubleshoot-backend-crash.md
frontend/: README.md
frontend/streamlit/: Dockerfile  __init__.py  app.py  dev_with_reload.py  requirements.txt  run_dev.sh
frontend/streamlit/.streamlit/: config.toml
lake-flow/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
lake-flow-ui/pages/: data_lake_explorer.py  qa.py
lake-flow-ui/services/: api_client.py
lake-flow/docs/: API_EMBED.md
lake-flow/src/lakeflow/: main.py
lake-flow/src/lakeflow/api/: admin.py  auth.py  inbox.py  pipeline.py  search.py
lake-flow/src/lakeflow/catalog/: db.py
lake-flow/src/lakeflow/common/: nas_io.py
lake-flow/src/lakeflow/core/: config.py
lake-flow/src/lakeflow/pipelines/embedding/: pipeline.py
lake-flow/src/lakeflow/pipelines/ingesting/: raw_ingestor.py
lake-flow/src/lakeflow/pipelines/staging/: pdf_analyzer.py  pipeline.py
lake-flow/src/lakeflow/scripts/: step1_raw.py  step2_staging.py  step3_processed_files.py  step3_processed_qdrant.py  test_semantic_search.py
lake-flow/src/lakeflow/services/: qdrant_service.py
lake-flow/src/lakeflow/vectorstore/: qdrant_ingest.py
(+98 files in other folders)
